--- a/PharmacyProject/wwwroot/css/site.css
+++ b/PharmacyProject/wwwroot/css/site.css
@@ -1,22 +1,144 @@
-﻿html {
-  font-size: 14px;
+﻿html, body {
+    margin: 0;
+    padding: 0;
 }
 
-@media (min-width: 768px) {
-  html {
+header {
+    background-color: #66CDAA;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.logo a{
+    margin: 0;
+    font-size: 32px;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-decoration: none;
+    transition: color 0.2s ease-in-out;
+}
+
+    .logo a:hover {
+        color: #E0FFFF;
+    }
+
+nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    margin-right: 20px;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    letter-spacing: 1px;
+    transition: color 0.2s ease-in-out;
+}
+    nav a:hover {
+        color: #E0FFFF;
+    }
+
+.register-btn {
+    background-color: #fff;
+    color: #000000;
+    padding: 12px 28px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+    .register-btn:hover {
+        background-color: #E0FFFF;
+    }
+
+
+.welcome-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    background-image:url(img/9.jpeg);
+}
+
+h1 {
+    font-size: 3rem;
+    text-align: center;
+    color: whitesmoke;
+    text-shadow: 2px 2px #ccc;
+}
+form {
+    margin: 0 auto;
+    margin-left: 2%;
+}
+
+
+/* Стили для выпадающего списка */
+#selectBox {
+    margin-top: 20px;
+    width: 25%;
+    display: block;
+    padding: 12px;
     font-size: 16px;
-  }
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    color: #333;
+    background-color: #fff;
+    border-radius: 8px;
+}
+    #selectBox:hover,
+    #selectBox:focus {
+        border-color: #66CDAA;
+    }
+
+
+#selectBox2 {
+    margin-top: 20px;
+    display: block;
+    width: 25%;
+    padding: 12px;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    color: #333;
+    background-color: #fff;
+    border-radius: 8px;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    #selectBox2:hover,
+    #selectBox2:focus {
+        border-color: #66CDAA;
+    }
+/* Стили для кнопки */
+input.buttonSubmit {
+    margin-top: 20px;
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    background-color: #66CDAA;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
+    input.buttonSubmit:hover {
+        background-color: #66CDDD;
+    }
