--- a/PharmacyProject/Views/Home/Register.cshtml
+++ b/PharmacyProject/Views/Home/Register.cshtml
@@ -16,7 +16,8 @@
 </form>
 
 
-<script>var tokenKey = "SecurityKeyForToken";
+<script>
+    var tokenKey = "SecurityKeyForToken";
 
     document.getElementById('registerForm').addEventListener('submit', function (event) {
         event.preventDefault();
